<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_name"/>

    <EditText
        android:id="@+id/title0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"/>

    <EditText
        android:id="@+id/title1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title1"/>
    <EditText
        android:id="@+id/title2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/active"
        android:text="@string/task_active"/>
    <Button
        android:id="@+id/ricieve_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recieve_name"
        android:onClick="onClickRecieve"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickDelete"
            android:text="@string/delete"
            android:visibility="invisible" />
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickCancel"
            android:text="@string/cancel"
            android:visibility="invisible" />
    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:onClick="onClickConfirm"
        android:text="@string/confirm" />
    </FrameLayout>
</LinearLayout>